# paas-lab

./: .env-example  .gitignore  HACKAPIZZA-SKETCH.ipynb  README.md  pyproject.toml
results/: tmp.csv
results-to-keep/: tmp-22.csv
src/paas_lab/templates/: agent_basic.py  dag_basic.py  datapizza_async.py  datapizza_basic.py  datapizza_memory.py  multi_agent.py  multi_modality.py
src/paas_lab/templates/weather/: weather_service.py
src/paas_lab/utils/: client_template.py  config_ingestion.yml  config_rag.yml  local_client.py  openai_client.py  qdrant_db_client.py  utils.py
src/paas_lab/utils/not_working_code/: config_ingestion_pipeline.py  config_rag.py  programmatical_ingestion_pipeline.py  programmatical_rag.py
